代理海报分享与微信lib升级

--- a/wx-mini-program/project.config.json
+++ b/wx-mini-program/project.config.json
@@ -3,6 +3,7 @@
 	"setting": {
 		"urlCheck": true,
 		"es6": true,
+		"enhance": false,
 		"postcss": true,
 		"minified": true,
 		"newFeature": true,
@@ -18,7 +19,7 @@
 		}
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.0.4",
+	"libVersion": "2.9.4",
 	"appid": "wx4901b319ace4f88a",
 	"projectname": "dts-shop",
 	"simulatorType": "wechat",
