--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,21 @@
         <java.version>1.8</java.version>
         <maven.test.skip>true</maven.test.skip>
         <fastjson.version>1.2.70</fastjson.version>
-        <jackson-databind.version>2.9.8</jackson-databind.version>
+        <jackson-databind.version>2.9.6</jackson-databind.version>
+        <mybatis-spring-boot-starter.version>1.3.2</mybatis-spring-boot-starter.version>
+        <pagehelper-spring-boot-starter.version>1.2.5</pagehelper-spring-boot-starter.version>
+        <shiro-spring-boot-web-starter.version>1.4.0</shiro-spring-boot-web-starter.version>
+        <hibernate-validator.version>6.0.15.Final</hibernate-validator.version>
+        <mysql-connector-java.version>5.1.46</mysql-connector-java.version>
+        <druid-spring-boot-starter.version>1.1.10</druid-spring-boot-starter.version>
+        <weixin-java-pay.version>3.3.0</weixin-java-pay.version>
+        <weixin-java-miniapp.version>3.3.0</weixin-java-miniapp.version>
+        <qcloudsms.version>1.0.5</qcloudsms.version>
+        <cos_api.version>5.4.4</cos_api.version>
+        <aliyun-sdk-oss.version>2.5.0</aliyun-sdk-oss.version>
+        <qiniu-java-sdk.version>[7.2.0, 7.2.99]</qiniu-java-sdk.version>
+        <spring-boot-starter-json.version>2.0.4.RELEASE</spring-boot-starter-json.version>
+        <spring-boot-starter-mail.version>2.0.4.RELEASE</spring-boot-starter-mail.version>
 	</properties>
     
 	<modules>
@@ -34,90 +48,89 @@
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
-                <version>1.3.2</version>
+                <version>${mybatis-spring-boot-starter.version}</version>
             </dependency>
 
             <!-- Spring Boot pagehelper 依赖 -->
             <dependency>
                 <groupId>com.github.pagehelper</groupId>
                 <artifactId>pagehelper-spring-boot-starter</artifactId>
-                <version>1.2.5</version>
+                <version>${pagehelper-spring-boot-starter.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.apache.shiro</groupId>
                 <artifactId>shiro-spring-boot-web-starter</artifactId>
-                <version>1.4.0</version>
+                <version>${shiro-spring-boot-web-starter.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.hibernate.validator</groupId>
                 <artifactId>hibernate-validator</artifactId>
-                <version>6.0.15.Final</version>
+                <version>${hibernate-validator.version}</version>
             </dependency>
 
             <!-- MySQL 连接驱动依赖 -->
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>5.1.46</version>
+                <version>${mysql-connector-java.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
-                <version>1.1.10</version>
+                <version>${druid-spring-boot-starter.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.github.binarywang</groupId>
                 <artifactId>weixin-java-pay</artifactId>
-                <version>3.3.0</version>
+                <version>${weixin-java-pay.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.github.binarywang</groupId>
                 <artifactId>weixin-java-miniapp</artifactId>
-                <version>3.3.0</version>
+                <version>${weixin-java-miniapp.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.github.qcloudsms</groupId>
                 <artifactId>qcloudsms</artifactId>
-                <version>1.0.5</version>
+                <version>${qcloudsms.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.qcloud</groupId>
                 <artifactId>cos_api</artifactId>
-                <version>5.4.4</version>
+                <version>${cos_api.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.aliyun.oss</groupId>
                 <artifactId>aliyun-sdk-oss</artifactId>
-                <version>2.5.0</version>
+                <version>${aliyun-sdk-oss.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.qiniu</groupId>
                 <artifactId>qiniu-java-sdk</artifactId>
-                <version>[7.2.0, 7.2.99]</version>
+                <version>${qiniu-java-sdk.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-json</artifactId>
-                <version>2.0.4.RELEASE</version>
+                <version>${spring-boot-starter-json.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-mail</artifactId>
-                <version>2.0.4.RELEASE</version>
+                <version>${spring-boot-starter-mail.version}</version>
 			</dependency>
-			
-			
+
 			 <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
