--- a/admin-ui/package.json
+++ b/admin-ui/package.json
@@ -1,18 +1,25 @@
 {
   "name": "dts-admin",
   "version": "1.0.0",
-  "description": "dts-admin basing on vue-element-admin 3.9.3",
+  "description": "dts-admin basing on vue-element-admin 4.3.0",
   "author": "chenbo <623659388@qq.com>",
-  "license": "LGPL-3.0",
+  "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "cross-env BABEL_ENV=development webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "build:demo": "cross-env NODE_ENV=production env_config=demo node build/build.js",
-    "build:prod": "cross-env NODE_ENV=production env_config=prod node build/build.js",
+    "dev": "vue-cli-service serve",
+    "build": "vue-cli-service build --mode production",
+    "build:prod": "vue-cli-service build --mode production",
+    "build:dep": "vue-cli-service build --mode deployment",
+    "preview": "node build/index.js --preview",
     "lint": "eslint --ext .js,.vue src",
-    "test": "npm run lint",
-    "precommit": "lint-staged",
+    "test:unit": "jest --clearCache && vue-cli-service test:unit",
+    "test:ci": "npm run lint && npm run test:unit",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "src/**/*.{js,vue}": [
@@ -21,32 +28,39 @@
     ]
   },
   "dependencies": {
-    "@tinymce/tinymce-vue": "1.1.0",
-    "@riophae/vue-treeselect": "0.0.37",
-    "v-charts": "1.19.0",
-    "axios": "0.18.0",
-    "clipboard": "1.7.1",
+    "@tinymce/tinymce-vue": "3.0.1",
+    "axios": ">=0.21.2",
+    "clipboard": "2.0.4",
     "connect": "3.6.6",
-    "echarts": "4.1.0",
-    "element-ui": "2.4.6",
+    "core-js": "^3.30.1",
+    "echarts": "4.2.1",
+    "element-ui": "2.15.6",
     "file-saver": "1.3.8",
-    "font-awesome": "4.7.0",
     "js-cookie": "2.2.0",
-    "jszip": "3.1.5",
+    "lodash": "^4.17.11",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
-    "screenfull": "3.3.3",
-    "vue": "2.5.17",
-    "vue-count-to": "1.0.13",
+    "path-to-regexp": "2.4.0",
+    "screenfull": "4.2.0",
+    "script-loader": "0.7.2",
+    "v-charts": "1.19.0",
+    "vue": "2.6.10",
     "vue-i18n": "7.3.2",
-    "vue-router": "3.0.1",
-    "vuex": "3.0.1",
-    "xlsx": "^0.11.16"
+    "vue-count-to": "1.0.13",
+    "vue-router": "3.0.2",
+    "vuex": "3.1.0",
+    "xlsx": ">=0.17.0"
   },
   "devDependencies": {
-    "autoprefixer": "8.5.0",
-    "babel-core": "6.26.3",
-    "babel-eslint": "8.2.6",
+    "@babel/core": "7.0.0",
+    "@babel/register": "7.0.0",
+    "@vue/cli-plugin-babel": "4.4.4",
+    "@vue/cli-plugin-eslint": "4.4.4",
+    "@vue/cli-plugin-unit-jest": "4.4.4",
+    "@vue/cli-service": "4.4.4",
+    "autoprefixer": "9.5.1",
+    "babel-eslint": "10.1.0",
+    "babel-jest": "23.6.0",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
     "babel-loader": "7.1.5",
     "babel-plugin-dynamic-import-node": "2.0.0",
@@ -54,59 +68,33 @@
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-plugin-transform-vue-jsx": "3.7.0",
     "babel-preset-env": "1.7.0",
-    "babel-preset-stage-2": "6.24.1",
-    "chalk": "2.4.1",
-    "copy-webpack-plugin": "4.5.2",
-    "cross-env": "^5.2.0",
-    "css-loader": "1.0.0",
-    "eslint": "4.19.1",
-    "eslint-friendly-formatter": "4.0.1",
-    "eslint-loader": "2.0.0",
-    "eslint-plugin-vue": "4.7.1",
-    "file-loader": "1.1.11",
-    "friendly-errors-webpack-plugin": "1.7.0",
-    "glob": "^7.1.4",
-    "hash-sum": "1.0.2",
-    "html-webpack-plugin": "4.0.0-alpha",
-    "husky": "0.14.3",
-    "lint-staged": "7.2.2",
-    "mini-css-extract-plugin": "0.4.1",
-    "node-notifier": "5.2.1",
-    "node-sass": "^4.7.2",
-    "optimize-css-assets-webpack-plugin": "5.0.0",
-    "ora": "3.0.0",
-    "path-to-regexp": "2.4.0",
-    "portfinder": "1.0.13",
+    "chalk": "2.4.2",
+    "chokidar": "2.1.5",
+    "connect": "3.6.6",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "html-webpack-plugin": "3.2.0",
+    "husky": "1.3.1",
+    "lint-staged": "8.1.5",
     "postcss-import": "11.1.0",
     "postcss-loader": "2.1.6",
     "postcss-url": "7.3.2",
-    "rimraf": "2.6.2",
-    "sass-loader": "7.0.3",
-    "script-ext-html-webpack-plugin": "2.0.1",
-    "script-loader": "0.7.2",
-    "semver": "5.5.0",
+    "runjs": "4.3.2",
+    "sass": "1.26.2",
+    "sass-loader": "8.0.2",
+    "script-ext-html-webpack-plugin": "2.1.3",
     "serve-static": "1.13.2",
-    "shelljs": "0.8.2",
-    "svg-sprite-loader": "3.8.0",
-    "svgo": "1.0.5",
-    "uglifyjs-webpack-plugin": "1.2.7",
-    "url-loader": "1.0.1",
-    "vue-loader": "15.3.0",
-    "vue-style-loader": "4.1.2",
-    "vue-template-compiler": "2.5.17",
-    "webpack": "4.16.5",
-    "webpack-bundle-analyzer": "2.13.1",
-    "webpack-cli": "3.1.0",
-    "webpack-dev-server": "3.1.14",
-    "webpack-merge": "4.1.4"
+    "svg-sprite-loader": "4.1.3",
+    "svgo": "1.2.0",
+    "vue-template-compiler": "2.6.10"
   },
   "engines": {
-    "node": ">= 6.0.0",
+    "node": ">=8.9",
     "npm": ">= 3.0.0"
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
+    "last 2 versions"
   ]
 }
