--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,9 @@
 	    	</activation>
 	    	<properties>
 	    	    <profile.active>dev</profile.active>
+                <!-- 各个服务的端口配置 -->
+                <api.wx.port>8080</api.wx.port>
+                <api.admin.port>8083</api.admin.port>
 	    	    <logback.dir>./logs</logback.dir>
 	    	</properties>
     	</profile>
@@ -181,6 +184,9 @@
 	    	<id>test-online</id>
 	    	<properties>
 	    	    <profile.active>demo</profile.active>
+                <!-- 各个服务的端口配置 -->
+                <api.wx.port>8080</api.wx.port>
+                <api.admin.port>8083</api.admin.port>
 	    	    <logback.dir>./logs</logback.dir>
 	    	</properties>
     	</profile>
@@ -189,6 +195,9 @@
 	    	<id>prod</id>
 	    	<properties>
 	    	    <profile.active>prod</profile.active>
+                <!-- 各个服务的端口配置 -->
+                <api.wx.port>8080</api.wx.port>
+                <api.admin.port>8083</api.admin.port>
 	    	    <logback.dir>./logs</logback.dir>
 	    	</properties>
     	</profile>
